# chatgpt-invoice-downloader

./: .env.example  .gitignore  README.md  pyproject.toml
src/invoice_downloader/: __init__.py  chatgpt.py  cli.py  config.py  drive.py  manifest.py
tests/: test_chatgpt.py  test_config.py  test_manifest.py  test_manual_e2e.py
